--- a/style.css
+++ b/style.css
@@ -18,12 +18,24 @@
 	margin-bottom: 20px;
 	border: thin dotted black;
 	border-radius: 10px;
+	height: 30px;
+}
+.todo__edit {
+	/* grid-column: 0 / span 1; */
+	/* display: flex;
+	align-items: flex-end; */
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	border: thin dotted black;
+	border-radius: 10px;
+	height: 30px;
+	width: 100%;
 }
 .todo__add {
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-evenly;
-	margin-bottom: 20px;
 }
 .todo__nav {
 	grid-column: 1 / span 2;
@@ -33,7 +45,8 @@
 	border-color: cornflowerblue;
 }
 .todo__list {
-	margin-top: 50px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 /* .todo__list.todo__all {
 	background-color: rgb(216, 216, 216);
