--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1 {
 	background: white;
 	font-size: 20px;
 	text-align: center;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .todo__select_all {
 	margin-top: 15px;
@@ -81,6 +82,7 @@ h1 {
 	height: 40px;
 	width: 500px;
 	font-size: 20px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .todo__checkbox {
 	margin-left: 10px;
