--- a/style.css
+++ b/style.css
@@ -141,15 +141,17 @@ h1 {
 	font-weight: bold;
 	font-size: 15px;
 	background: rgb(230, 230, 230);
-	color: #184A45FF;
+	color: rgb(32, 113, 218);
+	border-color: rgb(32, 113, 218);
 }
 .active {
 	border-color: black;
 	border-radius: 5px;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 18px;
 	color: rgb(230, 230, 230);
-	background: #184A45FF;
+	background: rgb(32, 113, 218);
+	border-color: rgb(32, 113, 218);
 }
 .todo__note {
 	margin-bottom: 5px;
